--- a/index.html
+++ b/index.html
@@ -3,135 +3,138 @@
 
 <head>
 
-  <!-- Basic Page Needs
+    <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Sen Gupta | Sourav</title>
-  <meta name="description" content="Official website of Sourav Sen Gupta">
-  <meta name="author" content="Sourav Sen Gupta">
-  <meta name="keywords" content="Sourav Sen Gupta, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
+    <meta charset="utf-8">
+    <title>Sen Gupta | Sourav</title>
+    <meta name="description" content="Official website of Sourav Sen Gupta">
+    <meta name="author" content="Sourav Sen Gupta">
+    <meta name="keywords" content="Sourav Sen Gupta, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
 
-  <!-- Mobile Specific Metas
+    <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
+    <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 
-  <!-- CSS
+    <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/fontawesome/css/all.css">
-  <link rel="stylesheet" href="css/academicons/css/academicons.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/fontawesome/css/all.css">
+    <link rel="stylesheet" href="css/academicons/css/academicons.min.css">
 
 
-  <!-- Favicon
+    <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 
 <body>
 
-  <!-- Primary Page Layout
+    <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="three columns" style="margin-top: 5%">
-        <a class="nav-link active" href="index.html">Sourav SEN GUPTA</a>
-      </div>
-      <div class="nine columns" style="margin-top: 5%">
-        <div class="nav">
-          <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="teaching.html">teaching</a></li>
-            <li class="nav-item"><a class="nav-link" href="research.html">research</a></li>
-            <li class="nav-item"><a class="nav-link" href="activities.html">activities</a></li>
-            <li class="nav-item"><a class="nav-link" href="random.html">random</a></li>
-          </ul>
+    <div class="container">
+        <div class="row">
+            <div class="three columns homepage" style="margin-top: 5%">
+                <a class="nav-link active" href="index.html">Sourav SEN GUPTA</a>
+            </div>
+            <div class="nine columns collapse" style="margin-top: 5%">
+                <div class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a class="nav-link" href="teaching.html">teaching</a></li>
+                        <li class="nav-item"><a class="nav-link" href="research.html">research</a></li>
+                        <li class="nav-item"><a class="nav-link" href="activities.html">activities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="random.html">random</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="three columns homepage" style="margin-top: 5%">
+                <img class="profile" src="images/sourav_profile.png">
+                <p> </p>
+                <h6>Lecturer and Assistant Chair (Admissions and Outreach)</h6>
+                <p>School of Computer Science and Engineering, Nanyang Technological University</p>
+                <p>50 Nanyang Avenue, Singapore 639798</p>
+                <p>Office : N4-02b-45<br />
+                    Phone : +65 6790 4587<br />
+                    <strong>sg.sourav@ntu.edu.sg</strong></p>
+                <h4>
+                    <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
+                    <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i></a>
+                    <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i></a>
+                    <a href="https://orcid.org/0000-0002-4197-582X" target="_blank"><i class="ai ai-orcid-square"></i></a>
+                </h4>
+            </div>
+            <div class="nine columns collapse" style="margin-top: 5%">
+                <p class="lead">I am a Teacher and Researcher, positioned precariously at the confluence of Computer Science, Mathematics and Engineering. While my research area and interest revolves around the &quot;science of security&quot;
+                    (primarily
+                    focused on cryptology), I love to teach the &quot;art of analytics&quot; (broadly dealing with data science). I enjoy learning new things and explore new technical domains. Essentially, I remain an ardent student of Mathematics
+                    and
+                    Computing.</p>
+
+                <blockquote>I will be glad to share my CV, with further professional details, if you are interested. You may also check out my professional profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
+                            class="fab fa-linkedin"></i> LinkedIn</a> and publications on <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i> dblp</a>.</blockquote>
+
+                <hr />
+
+                <h5>Professional Experience</h5>
+
+                <ul>
+                    <li>Since 2018 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
+                    <li>May-Dec 2017 : Visiting Lecturer -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
+                    <li>2014-2017 : Lecturer-cum-PDF -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
+                    <li>2011-2014 : Researcher -- <a href="http://www.isical.ac.in/~coec" target="_blank">Centre of Excellence in Cryptology, Indian Statistical Institute</a></li>
+                    <li>2010-2011 : Research-Fellow -- <a href="http://www.isical.ac.in/~asu" target="_blank">Applied Statistics Unit, Indian Statistical Institute</a></li>
+                    <li>2009-2010 : Researcher -- <a href="http://www.isical.ac.in/~asu" target="_blank">Applied Statistics Unit, Indian Statistical Institute</a></li>
+                    <li>2008-2009 : Teaching Assistant -- <a href="http://www.math.washington.edu/" target="_blank">Dept. of Mathematics, Univ. of Washington, Seattle</a></li>
+                    <li>Summer 2008 : Sessional Instructor -- <a href="https://uwaterloo.ca/pure-mathematics/" target="_blank">Dept. of Pure Mathematics, Univ. of Waterloo</a></li>
+                    <li>2006-2008 : Teaching Assistant -- <a href="https://uwaterloo.ca/pure-mathematics/" target="_blank">Dept. of Pure Mathematics, Univ. of Waterloo</a></li>
+                </ul>
+
+                <hr />
+
+                <h5>Academic Background</h5>
+
+                <ul>
+                    <li>2014 : PhD in Computer Science (Cryptology) --
+                        <a href="http://www.isical.ac.in/" target="_blank">Indian Statistical Institute, Kolkata</a>
+                    </li>
+
+                    <li>2008 : M.Math. in Pure Mathematics --
+                        <a href="http://uwaterloo.ca/" target="_blank">University of Waterloo, Canada</a>
+                    </li>
+
+                    <li>2006 : B.E.Tel.E. in Electronics and Telecommunication Engg. --
+                        <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University, Kolkata</a>
+                    </li>
+
+                    <li>2002 : Higher Secondary (10+2 Board Examination) -- <a href="http://www.jodhpurboyskolkata.in/Home.aspx" target="_blank">Jodhpur Park Boys' School, Kolkata</a>
+                    </li>
+
+                    <li>2000 : Secondary (10 Board Examination) -- <a href="http://www.jodhpurboyskolkata.in/Home.aspx" target="_blank">Jodhpur Park Boys' School, Kolkata</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="twelve columns" style="margin-bottom: 5%">
+                <hr />
+                <p class="footer">Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU GPLv3</a>. Created in 2020 by Sourav Sen Gupta, using <a href="http://getskeleton.com/" target="_blank">Skeleton</a>. Layout
+                    inspired
+                    by Jekyll theme <a href="https://github.com/mmistakes/minimal-mistakes" target="_blank">Minimal Mistakes</a>.</p>
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="three columns" style="margin-top: 5%">
-        <img src="images/sourav_profile.png" style="width: 90%;">
-        <p> </p>
-        <h6>Lecturer and Assistant Chair (Admissions and Outreach)</h6>
-        <p>School of Computer Science and Engineering, Nanyang Technological University</p>
-        <p>50 Nanyang Avenue, Singapore 639798</p>
-        <p>Office : N4-02b-45<br />
-          Phone : +65 6790 4587<br />
-          <strong>sg.sourav@ntu.edu.sg</strong></p>
-        <h4>
-          <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
-          <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i></a>
-          <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i></a>
-          <a href="https://orcid.org/0000-0002-4197-582X" target="_blank"><i class="ai ai-orcid-square"></i></a>
-        </h4>
-      </div>
-      <div class="nine columns" style="margin-top: 5%">
-        <p class="lead">I am a Teacher and Researcher, positioned precariously at the confluence of Computer Science, Mathematics and Engineering. While my research area and interest revolves around the &quot;science of security&quot; (primarily
-          focused on cryptology), I love to teach the &quot;art of analytics&quot; (broadly dealing with data science). I enjoy learning new things and explore new technical domains. Essentially, I remain an ardent student of Mathematics and
-          Computing.</p>
 
-        <blockquote>I will be glad to share my CV, with further professional details, if you are interested. You may also check out my professional profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
-              class="fab fa-linkedin"></i> LinkedIn</a> and publications on <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i> dblp</a>.</blockquote>
-
-        <hr />
-
-        <h5>Professional Experience</h5>
-
-        <ul>
-          <li>Since 2018 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
-          <li>May-Dec 2017 : Visiting Lecturer -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
-          <li>2014-2017 : Lecturer-cum-PDF -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
-          <li>2011-2014 : Researcher -- <a href="http://www.isical.ac.in/~coec" target="_blank">Centre of Excellence in Cryptology, Indian Statistical Institute</a></li>
-          <li>2010-2011 : Research-Fellow -- <a href="http://www.isical.ac.in/~asu" target="_blank">Applied Statistics Unit, Indian Statistical Institute</a></li>
-          <li>2009-2010 : Researcher -- <a href="http://www.isical.ac.in/~asu" target="_blank">Applied Statistics Unit, Indian Statistical Institute</a></li>
-          <li>2008-2009 : Teaching Assistant -- <a href="http://www.math.washington.edu/" target="_blank">Dept. of Mathematics, Univ. of Washington, Seattle</a></li>
-          <li>Summer 2008 : Sessional Instructor -- <a href="https://uwaterloo.ca/pure-mathematics/" target="_blank">Dept. of Pure Mathematics, Univ. of Waterloo</a></li>
-          <li>2006-2008 : Teaching Assistant -- <a href="https://uwaterloo.ca/pure-mathematics/" target="_blank">Dept. of Pure Mathematics, Univ. of Waterloo</a></li>
-        </ul>
-
-        <hr />
-
-        <h5>Academic Background</h5>
-
-        <ul>
-          <li>2014 : PhD in Computer Science (Cryptology) --
-            <a href="http://www.isical.ac.in/" target="_blank">Indian Statistical Institute, Kolkata</a>
-          </li>
-
-          <li>2008 : M.Math. in Pure Mathematics --
-            <a href="http://uwaterloo.ca/" target="_blank">University of Waterloo, Canada</a>
-          </li>
-
-          <li>2006 : B.E.Tel.E. in Electronics and Telecommunication Engg. --
-            <a href="http://www.jaduniv.edu.in/" target="_blank">Jadavpur University, Kolkata</a>
-          </li>
-
-          <li>2002 : Higher Secondary (10+2 Board Examination) -- <a href="http://www.jodhpurboyskolkata.in/Home.aspx" target="_blank">Jodhpur Park Boys' School, Kolkata</a>
-          </li>
-
-          <li>2000 : Secondary (10 Board Examination) -- <a href="http://www.jodhpurboyskolkata.in/Home.aspx" target="_blank">Jodhpur Park Boys' School, Kolkata</a>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-    <div class="row">
-      <div class="twelve columns" style="margin-bottom: 5%">
-        <hr />
-        <p class="footer">Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU GPLv3</a>. Created in 2020 by Sourav Sen Gupta, using <a href="http://getskeleton.com/" target="_blank">Skeleton</a>. Layout inspired
-          by Jekyll theme <a href="https://github.com/mmistakes/minimal-mistakes" target="_blank">Minimal Mistakes</a>.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- End Document
+    <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
