--- a/publications/2013_phd_thesis.html
+++ b/publications/2013_phd_thesis.html
@@ -40,10 +40,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="three columns" style="margin-top: 5%">
+      <div class="three columns homepage" style="margin-top: 5%">
         <a class="nav-link" href="../index.html">Sourav SEN GUPTA</a>
       </div>
-      <div class="nine columns" style="margin-top: 5%">
+      <div class="nine columns collapse" style="margin-top: 5%">
         <div class="nav">
           <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="../teaching.html">teaching</a></li>
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="nine columns">
+    <div class="nine columns collapse">
 
         <h6>Abstract</h6>
 
@@ -87,7 +87,7 @@
 <p>In the second part of this thesis, we systematically study the hardware implementation of RC4, and propose the fastest known design for the cipher. For the first time in the literature, we exploit the idea of loop unrolling in RC4 hardware design, and subsequently combine hardware pipelining to loop unrolling in a hybrid architecture that produces 2 bytes-per-cycle throughput in RC4. This is better than the existing 3 cycles-per-byte design by Kitsos, Kostopoulos, Sklavos and Koufopavlou, and the 3 cycles-per-byte and 1 cycle- per-byte patents of Matthews Jr. We have optimized and implemented our proposed designs using VHDL description, synthesized with 130 nm, 90 nm and 65 nm fabrication technologies, for proper comparison with existing designs in terms of keystream throughput and hardware footprint.</p>
 
       </div>
-      <div class="three columns">
+      <div class="three columns collapse">
           <img src="images/nonrandomRC4.png" alt="Biases in the RC4 Keystream" width="100%">
           <p>Biases in the RC4 Keystream</p>
           <img src="images/implementedRC4.png" alt="Best Implementation of RC4" width="100%">
