--- a/random.html
+++ b/random.html
@@ -3,116 +3,177 @@
 
 <head>
 
-  <!-- Basic Page Needs
+    <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Sen Gupta | Sourav</title>
-  <meta name="description" content="Official website of Sourav Sen Gupta">
-  <meta name="author" content="Sourav Sen Gupta">
-  <meta name="keywords" content="Sourav Sen Gupta, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
+    <meta charset="utf-8">
+    <title>Sen Gupta | Sourav</title>
+    <meta name="description" content="Official website of Sourav Sen Gupta">
+    <meta name="author" content="Sourav Sen Gupta">
+    <meta name="keywords" content="Sourav Sen Gupta, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
 
-  <!-- Mobile Specific Metas
+    <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
+    <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 
-  <!-- CSS
+    <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/fontawesome/css/all.css">
-  <link rel="stylesheet" href="css/academicons/css/academicons.min.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/fontawesome/css/all.css">
+    <link rel="stylesheet" href="css/academicons/css/academicons.min.css">
 
 
-  <!-- Favicon
+    <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 
 <body>
 
-  <!-- Primary Page Layout
+    <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="three columns" style="margin-top: 5%">
-        <a class="nav-link" href="index.html">Sourav SEN GUPTA</a>
-      </div>
-      <div class="nine columns" style="margin-top: 5%">
-        <div class="nav">
-          <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="teaching.html">teaching</a></li>
-            <li class="nav-item"><a class="nav-link" href="research.html">research</a></li>
-            <li class="nav-item"><a class="nav-link" href="activities.html">activities</a></li>
-            <li class="nav-item"><a class="nav-link active" href="random.html">random</a></li>
-          </ul>
+    <div class="container">
+        <div class="row">
+            <div class="three columns homepage" style="margin-top: 5%">
+                <a class="nav-link" href="index.html">Sourav SEN GUPTA</a>
+            </div>
+            <div class="nine columns collapse" style="margin-top: 5%">
+                <div class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a class="nav-link" href="teaching.html">teaching</a></li>
+                        <li class="nav-item"><a class="nav-link" href="research.html">research</a></li>
+                        <li class="nav-item"><a class="nav-link" href="activities.html">activities</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="random.html">random</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="three columns collapse" style="margin-top: 5%">
+                <img class="profile" src="images/sourav_profile.png">
+                <p> </p>
+                <h6>Lecturer and Assistant Chair (Admissions and Outreach)</h6>
+                <p>School of Computer Science and Engineering, Nanyang Technological University</p>
+                <p>50 Nanyang Avenue, Singapore 639798</p>
+                <p>Office : N4-02b-45<br />
+                    Phone : +65 6790 4587<br />
+                    <strong>sg.sourav@ntu.edu.sg</strong></p>
+                <h4>
+                    <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
+                    <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i></a>
+                    <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i></a>
+                    <a href="https://orcid.org/0000-0002-4197-582X" target="_blank"><i class="ai ai-orcid-square"></i></a>
+                </h4>
+            </div>
+            <div class="nine columns collapse" style="margin-top: 5%">
+
+                <p class="lead">This page will act as a buffer for everything about me that does not fit into any of the other (professional) pages on this website. Thus, this page will serve as a measure of my randomness, and hence, my entropy. Enjoy!</p>
+
+                <hr />
+
+                <h5>Random Facts</h5>
+
+                <ul>
+                    <li>I spent most of my childhood and initial school days at two small/medium towns of West Bengal, India -- <a href="https://en.wikipedia.org/wiki/Raghunathganj" target="_blank">Raghunathganj</a> (don't remember much) and <a
+                            href="https://en.wikipedia.org/wiki/Siliguri" target="_blank">Siliguri</a> (can't recognize now).</li>
+
+                    <li>I loved my one-year stint as a PhD Candidate at the <a href="http://www.washington.edu/" target="_blank">University of Washington</a>, Seattle, where I was fortunate to work with two intriguing personalities -- <a
+                            href="https://sites.math.washington.edu/~koblitz/" target="_blank">Neal Koblitz</a> and <a href="https://wstein.org/" target="_blank">William Stein</a>.</li>
+
+                    <li>Card tricks were my passion for a few years. I still have more than a dozen interesting decks collected from <a href="https://www.ellusionist.com/" target="_blank">Ellusionist</a> (the best online magic shop). Will post a list
+                        (or
+                        photos) sometime.</li>
+
+                    <li>I am extremely <a href="https://www.quietrev.com/the-introvert-test/?from=takethequiz" target="_blank">introverted</a> by nature, and public speaking used to be nerve-racking. I have quite painfully taught myself to <a
+                            href="https://www.youtube.com/watch?v=BY6VntTmtIo" target="_blank">perform</a> when I teach or speak in front of large audiences.</li>
+
+                    <li><a href="https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder" target="_blank">Obsessive–compulsive disorder</a> suits me well, I guess. Can't help, anyway. If you are curious, check that every single item in
+                        this list
+                        <i>had to be</i> two full lines of text on a standard browser.</li>
+                </ul>
+
+                <hr />
+
+                <h5>The Spirit of Leisure</h5>
+
+                <img src="images/whiskymap.jpg" alt="Whisky Map of Scotland" style="width: 99%;">
+
+                <hr />
+
+                <h5>Mortal Musings</h5>
+
+                <div class="row">
+
+                    <div class="one-third column">
+
+                        <p><strong>Identity</strong></p>
+
+                        <p>Identity is a fallacy<br />
+                            Conjectured my brain<br />
+                            Heart's adamant as is<br />
+                            Impossible to train</p>
+
+                        <p>Me and my years bygone<br />
+                            Omnipresent in absence<br />
+                            Identity is my armour<br />
+                            Amidst sounds of silence</p>
+
+                    </div>
+
+                    <div class="one-third column">
+
+                        <p><strong>সীমারেখা</strong></p>
+
+                        <p>আমার দিগন্তে যুদ্ধ যুদ্ধ সাজ<br />
+                            তোমার সীমান্ত কাঁটাতার ছেঁড়া ছেঁড়া<br />
+                            দেশনায়কেরা সিদ্ধান্ত নেবে আজ<br />
+                            কার কার ঘরে হবে নাকো কাল ফেরা</p>
+
+                        <p>মায়াজাল কাল দুজনেরই যাবে ছিঁড়ে<br />
+                            শিরদাঁড়া যদি সোজা হয় অবশেষে<br />
+                            আজ এসো দেখি দুজন দুপারে ফিরে<br />
+                            গণতন্ত্র কেমন ঘনিয়ে আসে</p>
+
+                    </div>
+
+                    <div class="one-third column">
+
+                        <p><strong>ग़ुलाम</strong></p>
+
+                        <p>ज़िंदेगी बस बस में है<br />
+                            ग़ुलामी नस नस में है<br />
+                            दुनिया को सालाम करे<br />
+                            ख़ंजरें आपस में है</p>
+
+                        <p>भुक्कड़ों के दंगल में<br />
+                            ज़हरीले ये रस्में है<br />
+                            ऐ मुल्क तेरी ख़ैर नहीं<br />
+                            सब ने खाए क़समें है</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="twelve columns" style="margin-bottom: 5%">
+                <hr />
+                <p class="footer">Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU GPLv3</a>. Created in 2020 by Sourav Sen Gupta, using <a href="http://getskeleton.com/" target="_blank">Skeleton</a>. Layout
+                    inspired
+                    by Jekyll theme <a href="https://github.com/mmistakes/minimal-mistakes" target="_blank">Minimal Mistakes</a>.</p>
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <div class="three columns" style="margin-top: 5%">
-        <img src="images/sourav_profile.png" style="width: 90%;">
-        <p> </p>
-        <h6>Lecturer and Assistant Chair (Admissions and Outreach)</h6>
-        <p>School of Computer Science and Engineering, Nanyang Technological University</p>
-        <p>50 Nanyang Avenue, Singapore 639798</p>
-        <p>Office : N4-02b-45<br />
-          Phone : +65 6790 4587<br />
-          <strong>sg.sourav@ntu.edu.sg</strong></p>
-        <h4>
-          <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
-          <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i></a>
-          <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i></a>
-          <a href="https://orcid.org/0000-0002-4197-582X" target="_blank"><i class="ai ai-orcid-square"></i></a>
-        </h4>
-      </div>
-      <div class="nine columns" style="margin-top: 5%">
 
-        <h5>Random Facts</h5>
-
-        <ul>
-          <li>I spent most of my childhood and initial school days at two small/medium towns of West Bengal, India -- <a href="https://en.wikipedia.org/wiki/Raghunathganj" target="_blank">Raghunathganj</a> (don't remember much) and <a
-              href="https://en.wikipedia.org/wiki/Siliguri" target="_blank">Siliguri</a> (can't recognize now).</li>
-
-          <li>I loved my one-year stint as a PhD Candidate at the <a href="http://www.washington.edu/" target="_blank">University of Washington</a>, Seattle, where I was fortunate to work with two intriguing personalities -- <a
-              href="https://sites.math.washington.edu/~koblitz/" target="_blank">Neal Koblitz</a> and <a href="https://wstein.org/" target="_blank">William Stein</a>.</li>
-
-          <li>Card tricks were my passion for a few years. I still have more than a dozen interesting decks collected from <a href="https://www.ellusionist.com/" target="_blank">Ellusionist</a> (the best online magic shop). Will post a list (or
-            photos) sometime.</li>
-
-          <li>I am extremely <a href="https://www.quietrev.com/the-introvert-test/?from=takethequiz" target="_blank">introverted</a> by nature, and public speaking used to be nerve-racking. I have quite painfully taught myself to <a
-              href="https://www.youtube.com/watch?v=BY6VntTmtIo" target="_blank">perform</a> when I teach or speak in front of large audiences.</li>
-
-          <li><a href="https://en.wikipedia.org/wiki/Obsessive%E2%80%93compulsive_disorder" target="_blank">Obsessive–compulsive disorder</a> suits me well, I guess. Can't help, anyway. If you are curious, check that every single item in this list
-            <i>had to be</i> two full lines of text on a standard browser.</li>
-        </ul>
-
-        <blockquote>This page will act as a buffer for everything that does not fit into any of the other pages on this website. It also serves as a measure of my randomness, and hence, my entropy!</blockquote>
-
-        <hr />
-
-        <h5>The Spirit of Leisure</h5>
-
-        <img src="images/whiskymap.jpg" alt="Whisky Map of Scotland" style="width: 99%;">
-
-      </div>
-    </div>
-    <div class="row">
-      <div class="twelve columns" style="margin-bottom: 5%">
-        <hr />
-        <p class="footer">Licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU GPLv3</a>. Created in 2020 by Sourav Sen Gupta, using <a href="http://getskeleton.com/" target="_blank">Skeleton</a>. Layout inspired
-          by Jekyll theme <a href="https://github.com/mmistakes/minimal-mistakes" target="_blank">Minimal Mistakes</a>.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- End Document
+    <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
