--- a/courses/cz1016.html
+++ b/courses/cz1016.html
@@ -40,10 +40,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="three columns" style="margin-top: 5%">
+      <div class="three columns homepage" style="margin-top: 5%">
         <a class="nav-link" href="../index.html">Sourav SEN GUPTA</a>
       </div>
-      <div class="nine columns" style="margin-top: 5%">
+      <div class="nine columns collapse" style="margin-top: 5%">
         <div class="nav">
           <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="../teaching.html">teaching</a></li>
@@ -68,10 +68,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="five columns">
-        <img src="images/posterDataScience.png" alt="Data Science Poster" width="100%">
-    </div>
-    <div class="seven columns">
+    <div class="nine columns collapse">
 
         <h6>Course Information</h6>
 
@@ -83,6 +80,9 @@
 
         <p>Course resources are available on <a href="https://ntulearn.ntu.edu.sg/" target="_blank">NTU Learn (Blackboard)</a>.</p>
 
+      </div>
+      <div class="three columns collapse">
+          <img src="images/posterDataScience.png" alt="Data Science Poster" width="100%">
       </div>
     </div>
     <div class="row">
