--- a/publications/2008_mmath_thesis.html
+++ b/publications/2008_mmath_thesis.html
@@ -40,10 +40,10 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="three columns" style="margin-top: 5%">
+      <div class="three columns homepage" style="margin-top: 5%">
         <a class="nav-link" href="../index.html">Sourav SEN GUPTA</a>
       </div>
-      <div class="nine columns" style="margin-top: 5%">
+      <div class="nine columns collapse" style="margin-top: 5%">
         <div class="nav">
           <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="../teaching.html">teaching</a></li>
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="row">
-    <div class="nine columns">
+    <div class="nine columns collapse">
 
         <h6>Abstract</h6>
 
@@ -77,7 +77,7 @@
         </p>
 
       </div>
-      <div class="three columns">
+      <div class="three columns collapse">
           <img src="images/bookArtin.jpg" alt="Artin's Conjecture Book" width="90%">
           <p><a href="https://www.amazon.com/Artins-Primitive-Root-Conjecture-Unconditional/dp/3639086937" target="_blank">Monograph from the Thesis</a></p>
       </div>
