Added headers to pages

--- a/activities.html
+++ b/activities.html
@@ -73,6 +73,9 @@
                 </h4>
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
+                
+                <h2>Activities</h2>
+
                 <p class="lead">I take an active interest in mentoring undergraduate and graduate students in research areas of my interest. I also love to deliver talks and workshops to make technology accessible to diverse interest groups and
                     audiences.
                     Time and again, I participate in professional services as an active member of the global academic community, and consult industry partners on problems of mutual interest. Occassionally, I write code to help me teach and learn.</p>
