--- a/random.html
+++ b/random.html
@@ -74,6 +74,8 @@
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
 
+                <h2>Random</h2>
+
                 <p class="lead">This page will act as a buffer for everything about me that does not fit into any of the other (professional) pages on this website. Thus, this page will serve as a measure of my randomness, and hence, my entropy. Enjoy!</p>
 
                 <hr />
