--- a/research.html
+++ b/research.html
@@ -73,6 +73,9 @@
                 </h4>
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
+
+                <h2>Research</h2>
+
                 <p class="lead">My primary research interest is in the field of Cryptology and Cybersecurity. At present, I take an active interest in the evolving research areas of Privacy Preserving technologies, Cryptocurrencies and Blockchain
                     Technology,
                     as well as in applications of Data Mining and Machine Learning in these areas. In addition to the above interests, I am also inclined towards some topics in Number Theory that have close ties with security and privacy
