--- a/teaching.html
+++ b/teaching.html
@@ -73,6 +73,9 @@
                 </h4>
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
+
+                <h2>Teaching</h2>
+
                 <p class="lead">I am interested in teaching Cryptology and Data Science to Computer Science students, at both undergraduate and graduate levels. I am also interested in teaching any core or cross-discipline course in Computer Science
                     at the
                     undergraduate level. While I love teaching laboratory-based courses in Programming, my passion lies in teaching Discrete Mathematics, Number Theory, Algebra and Linear Algebra to Computer Science students.</p>
